Bug 140982 - EDITING Comment range lost in deletions-in-margin mode
Summary: EDITING Comment range lost in deletions-in-margin mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: tracked-changes-in-margin
  Show dependency treegraph
 
Reported: 2021-03-12 13:07 UTC by NISZ LibreOffice Team
Modified: 2021-03-18 09:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
attachment #139963 after disabling deletions-in-margin mode (31.70 KB, image/png)
2021-03-12 13:07 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-03-12 13:07:04 UTC
Created attachment 170438 [details]
attachment #139963 [details] after disabling deletions-in-margin mode

This is a followup to bug #115815
When a comment is added to a range of deleted text and deletions-in-margin mode is activated and deactivated then the range of the comment is lost and it’s reduced to a point of text.

Steps to reproduce:
    1. Open attachment #139963 [details]
    2. Select the deleted word “Bilal” and add a comment on it.
    3. In the Track Changes toolbar turn on and off the Deletion on Margins mode

Actual results:
The comment is not on the deleted word “Bilal” but at the end of it.

Expected results:
The comment range is retained.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 2fb274950e5207ca55f4f52325fb522bd44024e1
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL