tdf#140982 sw ChangesInMargin: fix annotation ranges

Annotations of tracked deletions collapsed at the
end of the annotation range in ChangesInMargin mode
(as before saving the document, see
commit d325cd0c69b7c0cc4f47105749a98995de81cc9d
"tdf#115815 sw: fix lost annotation ranges of redlines").

Change-Id: I413804cfcdf972f054b65e28e6265c30d25731e3